--- a/frontend/src/components/ContactSection/ContactSection.module.css
+++ b/frontend/src/components/ContactSection/ContactSection.module.css
@@ -1,45 +1,34 @@
-.featuresSection {
+.contactSection {
   width: 100%;
   padding-top: 100px;
   padding-bottom: 100px;
-  max-width: 1128px;
-  margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
   display: flex;
-  flex-direction: column;
-  gap: 50px;
+  justify-content: center;
 }
 
-.header {
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 24px;
   text-align: center;
+  gap: 24px;
 }
 
-.header h2 {
+.content h2 {
   font-family: "Inter", sans-serif;
   font-weight: 700;
   font-size: 36px;
+  line-height: 36px;
   color: #344256;
-  line-height: 26px;
   margin: 0;
 }
 
-.header p {
+.content p {
   font-family: "Inter", sans-serif;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 20px;
   color: #64748b;
-  max-width: 947px;
+  max-width: 543px;
   margin: 0;
-}
-
-.cardList {
-  display: flex;
-  flex-direction: row;
-  gap: 24px;
 }
