--- a/frontend/src/components/NutrientInput/NutrientInput.module.css
+++ b/frontend/src/components/NutrientInput/NutrientInput.module.css
@@ -23,6 +23,11 @@
   box-sizing: border-box;
 }
 
+.input:focus {
+  outline: none;
+  border-color: #4caf50;
+}
+
 .input::-webkit-outer-spin-button,
 .input::-webkit-inner-spin-button {
   -webkit-appearance: none;
